tests/snapshots/snapshots__few_characters-2.snap
---
source: tests/snapshots.rs
expression: "helper(&[('a', 0.5), ('b', 0.5),])"
---
[
    (
        'a',
        ValueOwned(0),
    ),
    (
        'b',
        ValueOwned(1),
    ),
]
