tests/snapshots/snapshots__few_characters.snap
---
source: tests/snapshots.rs
expression: "helper(&[('a', 1.0),])"
---
[
    (
        'a',
        ValueOwned(0),
    ),
]
