tests/snapshots/snapshots__slow_path-2.snap
---
source: tests/snapshots.rs
expression: "helper(&[('a', 0.2), ('b', 0.2), ('c', 0.2), ('b', 0.2), ('c', 0.2)])"
---
[
    (
        'c',
        ValueOwned(00),
    ),
    (
        'b',
        ValueOwned(01),
    ),
    (
        'b',
        ValueOwned(10),
    ),
    (
        'a',
        ValueOwned(110),
    ),
    (
        'c',
        ValueOwned(111),
    ),
]
