tests/snapshots/snapshots__slow_path.snap
---
source: tests/snapshots.rs
expression: "helper(&[('a', 0.25), ('b', 0.25), ('c', 0.5)])"
---
[
    (
        'c',
        ValueOwned(0),
    ),
    (
        'a',
        ValueOwned(10),
    ),
    (
        'b',
        ValueOwned(11),
    ),
]
