tests/snapshots/snapshots__weird_cases-2.snap
---
source: tests/snapshots.rs
expression: "helper(&[('a', 0.0), ('b', 0.5), ('c', 0.5)])"
---
[
    (
        'c',
        ValueOwned(0),
    ),
    (
        'a',
        ValueOwned(10),
    ),
    (
        'b',
        ValueOwned(11),
    ),
]
