tests/snapshots/snapshots__weird_cases.snap
---
source: tests/snapshots.rs
expression: "helper(&[('a', 0.0), ('b', 1.0),])"
---
[
    (
        'a',
        ValueOwned(0),
    ),
    (
        'b',
        ValueOwned(1),
    ),
]
